Everything is done for panda commerce

--- a/style.css
+++ b/style.css
@@ -12,10 +12,52 @@
     color: #FF136F;
 }
 .buy-now-button{
+    margin-top: 20px;
     background-image: linear-gradient(to bottom,#FF589B 0%,#FF136F 100%);
     color: #fff;
     border: none;
     border-radius: 8px;
     padding: 9px 25px;
     cursor: pointer;
+}
+.cat1, .cat2, .cat3{
+    padding: 10px 30px;  
+    border-radius: 10px;
+}
+.cat1{
+    background-color: orange;
+}
+
+.cat2{
+    background-color: orchid;
+}
+.cat3{
+    background-color: blue;
+}
+.catagories h1{
+    color: #fceae8;
+}
+.catagories img{
+    width: 100px;
+}
+.card{
+    
+    box-shadow: 5px 5px 10px lightgray;
+    border: none;
+    border-radius: 10px; 
+}
+.card-footer{
+    padding: .75rem 1.25rem;
+    background-color: white;
+    border-top: none;
+    
+}
+#subscribe{
+    height: 300px;
+}
+#subscribe h6{
+    color: gray;
+}
+footer{
+    text-align: center;
 }
